--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <img class="content_logo_img" src="img/Logo MB.png">
             <img class="content_logo_img" src="img/Logo Mariana.PNG">
         </div>
-        <div  class="content_links"></div>
-        <a class="content_menu_p" href="file:///C:/Users/Win/Desktop/ARQUIVOS%20PROJETO/Projeto%201/index.html">Home</a>
+        <div  class="content_links">
+        <a class="content_menu_p" href="#">Home</a>
         <p class="content_menu_p">Sobre</p>
         <p class="content_menu_p">Serviços</p>
         <p class="content_menu_p">Depoimentos</p>
