--- a/index.html
+++ b/index.html
@@ -87,9 +87,7 @@
         </div>
     </section>
 
-</body>
-
-<footer class="footer_content">
+  <footer class="footer_content">
   <div class="footer_content_1">
     <div class="footer_social_links">
       <a href="https://www.instagram.com/mariana.b.consultoria?igsh=MXY3ZXhwcmVkdHc0OQ==" target="_blank" rel="noopener noreferrer">
@@ -112,7 +110,9 @@
   </div>
 
   <div class="footer_content_2">
-    <p>© 2025 Juliana Bernardino. Todos os direitos reservados.</p>
+    <p>© 2025 JB Studio Web. Todos os direitos reservados.</p>
   </div>
 </footer>
+
+</body>
 </html>
