--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MB Mentoria</title>
-    <link rel="icon" href="img/Logo MB.png" type="image/x-icon">
+    <link rel="icon" href="img/Logo MB.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
