--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MB Mentoria</title>
     <link rel="icon" href="img/Logo MB.png" type="image/png">
+    <link rel="shortcut icon" href="img/Logo MB.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
